DOC: update VS Code dev link

--- a/src/compwa_policy/.template/CONTRIBUTING.md.jinja
+++ b/src/compwa_policy/.template/CONTRIBUTING.md.jinja
@@ -1,6 +1,6 @@
 # How to contribute?
 
-[![Open in Visual Studio Code](https://img.shields.io/badge/vscode-open-blue?logo=visualstudiocode)](https://open.vscode.dev/ComPWA/{{ REPO_NAME }})
+[![Open in Visual Studio Code](https://img.shields.io/badge/vscode-open-blue?logo=visualstudiocode)](https://github.dev/ComPWA/{{ REPO_NAME }})
 
 > [!TIP]
 > This package is part of the [ComPWA Organization](https://github.com/ComPWA). For more information about how to contribute to the packages, go to **[compwa.github.io/develop](https://compwa.github.io/develop)**!
