FIX: set correct organization in `CONTRIBUTING.md`

--- a/src/compwa_policy/.template/CONTRIBUTING.md.jinja
+++ b/src/compwa_policy/.template/CONTRIBUTING.md.jinja
@@ -1,6 +1,6 @@
 # How to contribute?
 
-[![Open in Visual Studio Code](https://img.shields.io/badge/vscode-open-blue?logo=visualstudiocode)](https://github.dev/ComPWA/{{ REPO_NAME }})
+[![Open in Visual Studio Code](https://img.shields.io/badge/vscode-open-blue?logo=visualstudiocode)](https://github.dev/{{ ORGANIZATION }}/{{ REPO_NAME }})
 
 > [!TIP]
 > This package is part of the [ComPWA Organization](https://github.com/ComPWA). For more information about how to contribute to the packages, go to **[compwa.github.io/develop](https://compwa.github.io/develop)**!
@@ -8,7 +8,7 @@
 To contribute to the project, you need to install the package in a virtual environment. This can be done best with [`uv`](https://docs.astral.sh/uv) (see installation instructions [here](https://docs.astral.sh/uv/getting-started/installation)). For this, you first need to get the source code with [Git](https://git-scm.com):
 
 ```shell
-git clone https://github.com/ComPWA/{{ REPO_NAME }}
+git clone https://github.com/{{ ORGANIZATION }}/{{ REPO_NAME }}
 cd {{ REPO_NAME }}
 ```
 
