DOC: improve task runner instructions

--- a/src/compwa_policy/.template/CONTRIBUTING.md.jinja
+++ b/src/compwa_policy/.template/CONTRIBUTING.md.jinja
@@ -31,8 +31,4 @@ and [`pre-commit install`](https://pre-commit.com/#3-install-the-git-hook-script
 pre-commit install --install-hooks
 ```
 
-If the repository provides a [`[tool.poe.tasks]`](https://poethepoet.natn.io) configuration under [`pyproject.toml`](./pyproject.toml), you can see which jobs it defines with:
-
-```shell
-poe
-```
+{{ RUNNER }}
